--- a/static/css/style.css
+++ b/static/css/style.css
@@ -251,6 +251,8 @@ body.dark-mode .marginContainer h1 {
 
 .motto {
     color: #163f53;
+    text-align: center;
+    font-size: 1rem;
 }
 
 #splashImage {
